<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context="com.techtator.berdie.forgotPassword.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/forget_forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="130dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:fontFamily="@font/librefranklin_bold"
            android:text="@string/forgot_password"/>
        <TextView
            android:id="@+id/forget_forget_password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:fontFamily="@font/librefranklin_regular"
            android:text="@string/forget_reset_message1"/>
        <TextView
            android:id="@+id/forget_forget_password2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:fontFamily="@font/librefranklin_regular"
            android:text="@string/forget_reset_message2"/>
        <EditText
            android:id="@+id/forget_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/text_border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:paddingStart="30dp"
            android:maxLength="25"
            android:fontFamily="@font/librefranklin_regular"
            android:textColorHint="@color/white" />
        <Button
            android:id="@+id/reset_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_translate"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textSize="20dp"
            android:text="@string/reset_password"
            android:textColor="@color/white"
            android:fontFamily="@font/librefranklin_bold" />
        <TextView
            android:id="@+id/no_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:fontFamily="@font/librefranklin_regular"
            android:text="@string/no_account"/>

        <Button
            android:id="@+id/forget_signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_translate"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textSize="20dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:fontFamily="@font/librefranklin_bold" />

    </LinearLayout>
</ScrollView>
