<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.techtator.berdie.signup.SignUpActivity"
    android:background="@drawable/gradient_background">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/signup_logo"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:src="@drawable/logo" />
        <Spinner
            android:id="@+id/signup_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="40dp"
            android:padding="8dp"
            android:paddingStart="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@drawable/text_border"
            android:entries="@array/list"
            android:fontFamily="@font/librefranklin_regular"
            android:spinnerMode="dialog" />

        <EditText
            android:id="@+id/signup_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_border"
            android:hint="@string/first_name"
            android:padding="8dp"
            android:paddingStart="30dp"
            android:maxLines="1"
            android:inputType="text"
            android:maxLength="15"
            android:fontFamily="@font/librefranklin_regular"
            android:textColorHint="@color/white" />
        <EditText
            android:id="@+id/signup_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_border"
            android:hint="@string/last_name"
            android:padding="8dp"
            android:paddingStart="30dp"
            android:maxLines="1"
            android:inputType="text"
            android:maxLength="15"
            android:fontFamily="@font/librefranklin_regular"
            android:textColorHint="@color/white" />
        <EditText
            android:id="@+id/signup_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_border"
            android:hint="@string/birthday"
            android:padding="8dp"
            android:paddingStart="30dp"
            android:maxLength="10"
            android:clickable="true"
            android:fontFamily="@font/librefranklin_regular"
            android:textColorHint="@color/white"
            android:datePickerMode="spinner"/>
        <EditText
            android:id="@+id/signup_email_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_border"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:paddingStart="30dp"
            android:maxLength="25"
            android:fontFamily="@font/librefranklin_regular"
            android:textColorHint="@color/white" />
        <EditText
            android:id="@+id/signup_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/text_border"
            android:hint="@string/phone"
            android:inputType="phone"
            android:maxLines="1"
            android:padding="8dp"
            android:paddingStart="30dp"
            android:maxLength="10"
            android:fontFamily="@font/librefranklin_regular"
            android:textColorHint="@color/white" />

        <Button
            android:id="@+id/signup_signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/button_translate"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="18dp"
            android:fontFamily="@font/librefranklin_bold" />

    </LinearLayout>
</ScrollView>
