<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/pg_pic"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/vancouver"/>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/librefranklin_bold"
                android:textSize="24dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:layout_marginStart="30dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                tools:text="Yuumi Nakamura"
                />
            <Button
                android:id="@+id/profile_edit_button"
                android:layout_width="110dp"
                android:layout_height="38dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/librefranklin_bold"
                android:textSize="18dp"
                android:paddingRight="7dp"
                android:layout_toLeftOf="@+id/user_name"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                android:background="@drawable/button_border"
                android:backgroundTint="@color/white"
                android:text="@string/edit"
                android:textColor="@color/darkGray"
                android:drawableRight="@drawable/pencil_icon32"
                />
            <include layout="@layout/fragment_goal_item"
                android:id="@+id/profile_goal"
                android:layout_below="@+id/pg_pic"
                android:layout_height="90dp"
                android:layout_width="match_parent"/>
            <TextView
                android:id="@+id/user_profile_text"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:background="@color/white"
                android:fontFamily="@font/librefranklin_regular"
                android:textSize="16dp"
                android:layout_below="@+id/profile_goal"
                tools:text="@string/profile_text"
                />
            <TextView
                android:id="@+id/university_title"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:background="@color/white"
                android:layout_marginStart="7dp"
                android:layout_alignParentLeft="true"
                android:text="@string/university"
                android:textColor="@color/blackGray"
                android:fontFamily="@font/librefranklin_bold"
                android:textSize="18dp"
                android:layout_below="@+id/user_profile_text"
                />
            <TextView
                android:id="@+id/university_text"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="7dp"
                android:layout_marginStart="7dp"
                android:background="@color/white"
                android:fontFamily="@font/librefranklin_regular"
                android:textSize="18dp"
                android:layout_below="@+id/university_title"
                android:layout_alignParentLeft="true"
                tools:text="UBC"
                />
            <TextView
                android:id="@+id/major_title"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:background="@color/white"
                android:layout_marginStart="7dp"
                android:layout_alignParentLeft="true"
                android:text="@string/major"
                android:textColor="@color/blackGray"
                android:fontFamily="@font/librefranklin_bold"
                android:textSize="18dp"
                android:layout_below="@+id/university_text"
                />
            <TextView
                android:id="@+id/major_text"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="7dp"
                android:layout_marginStart="7dp"
                android:background="@color/white"
                android:fontFamily="@font/librefranklin_regular"
                android:textSize="18dp"
                android:layout_below="@+id/major_title"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="true"
                tools:text="Programming"
                />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>